# rrapi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
examples/configs/: business_mapping.yaml
flowgenius/collectors/: __init__.py  log_collector.py  proxy_collector.py
flowgenius/core/: collector.py  config.py  correlator.py  generator.py  parser.py  validator.py
flowgenius/generators/: __init__.py  api_object.py  config.py  datafile.py  testcase.py
flowgenius/llm/: __init__.py  assertion_analyzer.py  base.py  code_generator.py  config.py  correlation_analyzer.py  prompt_templates.py
flowgenius/models/: __init__.py  api.py  assertion.py  correlation.py  traffic.py
flowgenius/parsers/: __init__.py  har_parser.py  log_parser.py  swagger_parser.py
flowgenius/utils/: __init__.py  config_loader.py  jsonpath.py  logger.py  regex_utils.py
mitmproxy_addon/: flow_capture.py
scripts/: generate_tests.py  process_logs.py  start_proxy.py
tests/: conftest.py
tests/fixtures/swagger_samples/: sample.yaml
tests/integration/: test_end_to_end.py  test_log_parse.py  test_proxy_capture.py  test_swagger_integration.py
tests/unit/: test_collector.py  test_correlator.py  test_generator.py  test_parser.py  test_validator.py
tests/unit/test_llm/: __init__.py  test_assertion_analyzer.py  test_base.py  test_code_generator.py  test_config.py  test_correlation_analyzer.py  test_prompt_templates.py
